syntax = "proto3";

package com.huanyu.weekly;

option java_package = "com.huanyu.weekly.netty.im.protocol";
option java_outer_classname = "ImRequestProto";

message ImRequest {
    int64 requestId = 2;
    string requestMessage = 1;
    int32 type = 3;
}